@@ -294,6 +294,20 @@ _mongoc_stream_socket_timed_out (mongoc_stream_t *stream) /* IN */
 }
 
 
+static bool
+_mongoc_stream_socket_should_retry (mongoc_stream_t *stream) /* IN */
+{
+   mongoc_stream_socket_t *ss = (mongoc_stream_socket_t *) stream;
+
+   ENTRY;
+
+   BSON_ASSERT (ss);
+   BSON_ASSERT (ss->sock);
+
+   RETURN (MONGOC_ERRNO_IS_AGAIN (ss->sock->errno_));
+}
+
+
 /*
  *--------------------------------------------------------------------------
  *
@@ -329,6 +343,7 @@ mongoc_stream_socket_new (mongoc_socket_t *sock) /* IN */
    stream->vtable.setsockopt = _mongoc_stream_socket_setsockopt;
    stream->vtable.check_closed = _mongoc_stream_socket_check_closed;
    stream->vtable.timed_out = _mongoc_stream_socket_timed_out;
+   stream->vtable.should_retry = _mongoc_stream_socket_should_retry;
    stream->vtable.poll = _mongoc_stream_socket_poll;
    stream->sock = sock;
 
